# dataflow

./: .gitignore  CHANGELOG.md  DATA_HANDLING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml
dataflow_agent/: __init__.py
docs/: aggregation_operator_guide.md  collector_quick_check_guide.md  dataflow_agent_input_contract_v0.1.md  dcp_self_check_guide.md  devops_collection_filling_guide.md  devops_dcp_collection_manual.md  package_generation_guide.md
samples/: README.md
samples/DCP_clean_v0.1/: dataflow_collection_template_v0.1.xlsx
samples/DCP_v0.1/: dataflow_collection_template_v0.1.xlsx
schemas/: workbook_schema.json
scripts/: build_dataflow_package.sh  build_service_drilldown.sh  check_dcp.sh  doctor.sh  merge_dcp.sh  query_service_ports.sh  scan_sensitive.sh  setup_env.sh
src/dataflow_agent/: __init__.py  architecture_findings.py  artifacts.py  cli.py  constants.py  defaults.py  diagram_overview.py  diagram_renderer.py  editable_exporter.py  elk_layout.mjs  graph_builder.py  merge.py  models.py  normalizer.py  packager.py  pipeline.py  port_index.py  report_generator.py  risk_checker.py  schema.py  summaries.py  util.py  validator.py  xlsx_reader.py
templates/dataflow_v1.0/: README.md  dataflow_agent_io_contract_v1.0.md  (+6 more)
tests/: test_agent_pipeline.py  test_analysis_indexes.py  test_change_diff_analyzer.py  test_critical_path_analyzer.py  test_data_quality_analyzer.py  test_incident_context_analyzer.py  test_monitoring_analyzer.py  test_security_analyzer.py
(+10 files in other folders)
